language/move-lang/tests/move_check/borrows/move_field_invalid.exp
error: 

    ┌── tests/move_check/borrows/move_field_invalid.move:12:17 ───
    │
 13 │         move s;
    │         ^^^^^^ Invalid move of local 's'
    ·
 12 │         let f = &s.f;
    │                 ---- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_field_invalid.move:17:17 ───
    │
 18 │         move s;
    │         ^^^^^^ Invalid move of local 's'
    ·
 17 │         let f = &mut s.f;
    │                 -------- It is still being mutably borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_field_invalid.move:22:17 ───
    │
 23 │         move s;
    │         ^^^^^^ Invalid move of local 's'
    ·
 22 │         let f = id(&s.f);
    │                 -------- It is still being borrowed by this reference
    │

error: 

    ┌── tests/move_check/borrows/move_field_invalid.move:27:17 ───
    │
 28 │         move s;
    │         ^^^^^^ Invalid move of local 's'
    ·
 27 │         let f = id_mut(&mut s.f);
    │                 ---------------- It is still being mutably borrowed by this reference
    │

